<resources>
    <string name="app_name">网木目</string>

    <string name="butler_service">服务管家</string>
    <string name="wechat">微信精选</string>
    <string name="girl">美女社区</string>
    <string name="user_center">个人中心</string>
    <string name="setting">设置</string>
    <string name="user_name">用户名</string>
    <string name="user_password">密码</string>
    <string name="login">登录</string>
    <string name="sign_up">注册</string>
    <string name="remember_password">记住密码</string>
    <string name="forgot_password">忘记密码</string>
    <string name="age">年龄</string>
    <string name="introduction">简介(可为空)</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="please_input_again">请再输入一次</string>
    <string name="email">邮箱</string>
    <string name="long_text">注册成功需要前往邮箱验证，否则无法登录！</string>
    <string name="change_password">修改密码</string>
    <string name="old_pass">旧密码</string>
    <string name="new_pass">新密码</string>
    <string name="logining">正在登陆</string>
    <string name="photo">拍照</string>
    <string name="picture">图库</string>
    <string name="cancel">取消</string>
    <string name="courier">快递查询</string>
    <string name="text_tost_empty">输入框不能为空</string>
    <string name="phone_adder">归属地查询</string>
    <string name="text_welfare">福利</string>
    <string name="update">下载更新</string>
    <string name="text_setting">设置</string>

    <string name="text_login">登录</string>
    <string name="text_registered">注册</string>
    <string name="text_forget_password">忘记密码</string>

    <string name="text_express_query">快递查询</string>
    <string name="text_belonging_query">归属地查询</string>
    <string name="text_download_update">下载更新</string>
    <string name="text_my_qrcode">我的二维码</string>
    <string name="text_my_location">我的位置</string>
    <string name="text_about_app">关于软件</string>

    <string name="text_hello_tts">你好，我是小优！</string>
    <string name="text_more_length">输入长度超出限制</string>
    <string name="text_nothing">这个人很懒，什么都没有留下！</string>
    <string name="text_editor_success">修改成功</string>
    <string name="text_editor_failure">修改失败</string>
    <string name="text_registered_successful">注册成功</string>
    <string name="text_registered_failure">注册失败：</string>
    <string name="text_two_input_not_consistent">两次输入的密码不一致</string>
    <string name="text_app_name">应用名:</string>
    <string name="text_version">版本号:</string>
    <string name="text_website_address">官网:www.imooc.com</string>
    <string name="text_email_send_ok">邮箱已经发送至：</string>
    <string name="text_email_send_no">邮箱发送失败</string>
    <string name="reset_successfully">重置密码成功</string>
    <string name="reset_failed">重置密码失败</string>
    <string name="text_test_version">"检测版本: "</string>
    <string name="text_Ddwnload_successful">下载成功</string>
    <string name="text_dwnload_failure">下载失败</string>
    <string name="text_unknown">未知</string>
    <string name="text_courier_company">快递公司</string>
    <string name="text_courier_number">快递单号</string>
    <string name="text_editor_password">修改密码</string>
    <string name="text_now_password">旧密码</string>
    <string name="text_new_password">新密码</string>
    <string name="text_email">邮箱</string>
    <string name="text_password_again">再次输入密码</string>
    <string name="text_keep_password">记住密码</string>
    <string name="text_input_phone">请输入号码</string>
    <string name="text_query">查询</string>
    <string name="text_user_name">用户名</string>
    <string name="text_age">年龄</string>
    <string name="text_desc">简介</string>
    <string name="text_password">密码</string>
    <string name="text_register_remind">注册成功需要前往邮箱验证，否则无法登录！</string>

    <string name="text_setting_title_1">语音播报</string>
    <string name="text_setting_title_2">智能短信提醒</string>
    <string name="text_setting_title_3">检测版本</string>
    <string name="text_setting_title_6">我的位置</string>
    <string name="text_setting_title_7">关于软件</string>
    <string name="text_setting_content_1">开启之后与服务管家对讲语音播报</string>
    <string name="text_setting_content_2">开启之后收到短信将弹框提示</string>
    <string name="text_setting_content_3">检查是否有新版本提示下载</string>
    <string name="text_now_login">正在登陆...</string>
    <string name="aboutme">本项目完全开源，由wmm387学习完成，是学习RxVolley、json解析和第三方工具封装的产物。\n\n图片来源：干货集中营 http://gank.io\n其余API来源：聚合数据 https://www.juhe.cn/</string>
    <string name="git">我的Github: https://github.com/wmm387</string>
    <string name="used">用到的开源库</string>
    <string name="used_git">com.tencent.bugly:crashreport:latest.release\nde.hdodenhof:circleimageview:2.1.0\ncom.squareup.picasso:picasso:2.5.2\ncom.github.chrisbanes:PhotoView:1.3.1\ncom.kymjs.rxvolley:rxvolley:1.1.2\ncom.kymjs.rxvolley:okhttp:1.1.0\ncn.bmob.android:bmob-sdk:3.5.0\ncom.daimajia.numberprogressbar:library:1.2@aar</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_home">首页</string>
    <string name="nav_bookmarks">收藏</string>

    <string name="zhihu_daily">知乎日报</string>
    <string name="guokr_handpick">果壳精选</string>
    <string name="douban_moment">豆瓣一刻</string>

    <!--常用-->
    <string name="positive">确定</string>
    <string name="negative">取消</string>
    <string name="share_error">分享失败</string>

    <string name="title_activity_read">阅读</string>
    <string name="title_activity_guokr_read">果壳精选</string>
    <string name="loading_more">正在加载…</string>
    <string name="loaded_failed">加载失败!</string>
    <string name="retry">重试</string>
    <string name="copied_to_clipboard">复制成功</string>
    <string name="copied_to_clipboard_failed">复制失败</string>
    <string name="added_to_bookmarks">已添加到收藏</string>
    <string name="deleted_from_bookmarks">已从收藏中删除</string>

    <string name="feel_lucky">随便看看</string>
    <string name="feel_lucky_short">随便看看</string>
    <string name="search_bookmarks">搜索收藏</string>
    <string name="check_bookmarks">查看收藏</string>

    <!--bottom sheet list-->
    <string name="action_add_to_bookmarks">添加到收藏</string>
    <string name="action_delete_from_bookmarks">取消收藏</string>
    <string name="action_copy_link">复制链接</string>
    <string name="action_open_in_browser">在浏览器中打开</string>
    <string name="action_copy_text">复制内容文本</string>
    <string name="action_share_as_text">作为文本分享</string>

    <!--main menu-->
    <string name="change_theme">切换主题</string>
    <string name="settings">设置</string>
    <!--navigation view menu end-->

    <string name="share_extra"> 分享自 纸飞机</string>
    <string name="share_to">分享至</string>

    <!--activity关于-->
    <string name="version">版本:V3.2.0</string>
    <string name="rate">为纸飞机应用评分</string>
    <string name="feedback">反馈Bug / 建议</string>
    <string name="donate">捐赠开发者</string>
    <string name="donate_content">支付宝账号将会复制到粘贴板，进入支付宝可直接粘贴完成捐赠，感谢您的支持！</string>
    <string name="donate_account">marktonymengyi@gmail.com</string>
    <string name="sendto">mailto:marktonymengyi@gmail.com</string>
    <string name="mail_topic">纸飞机使用反馈与建议</string>
    <string name="device_model">设备型号:</string>
    <string name="sdk_version">SDK版本:</string>
    <string name="no_mail_app">没有找到邮件类App</string>
    <string name="no_app_store_found">没有市场类App</string>
    <string name="no_browser_found">没有安装浏览器</string>
    <string name="author">作者</string>
    <string name="author_name">黎赵太郎</string>
    <string name="author_description">湖南,长沙</string>
    <string name="follow_me_on_github">在GitHub关注我</string>
    <string name="follow_me_on_zhihu">在知乎关注我</string>
    <string name="support">支持</string>
    <string name="feedback_description">帮助我改进纸飞机App</string>
    <string name="coffee">请我喝杯咖啡</string>
    <string name="coffee_description">如果你认同我的工作，可以请我喝杯咖啡表示支持</string>
    <string name="github_url">https://github.com/marktony</string>
    <string name="zhihu_url">https://www.zhihu.com/people/kirin-momo</string>
    <string name="rate_description">如果你喜欢纸飞机App,请在商店中给它一个好评吧</string>
    <string name="zhihu_account">\@黎赵太郎</string>
    <string name="open_source_license">开源许可</string>
    <string name="easter_egg">彩蛋</string>
    <string name="easter_egg_content">点我名字这么多次， 你一定是喜欢我!</string>
    <string name="sure">确定</string>
    <string name="yes">是的</string>
    <!--activity关于 end-->

    <!--settings_preference_fragment-->
    <string name="basic_settings">基本设置</string>
    <string name="no_picture_mode">无图模式</string>
    <string name="no_picture_mode_description">阅读时不再加载图片</string>
    <string name="in_app_browser">使用内置浏览器</string>
    <string name="in_app_browser_description">应用内查看链接</string>
    <string name="time_of_saving_articles">文章保存时间</string>
    <string name="other_settings">其他设置</string>
    <string name="clear_image_cache">清除图片缓存</string>
    <string name="clear_image_cache_successfully">清理成功</string>
    <!--setting-->

    <string name="network_error">网络走丢了…点击重试</string>
    <string name="refresh">刷新</string>
    <string name="nav_news">新闻</string>
    <string name="about">关于</string>
    <string name="exit">退出</string>
</resources>
