<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single"
        android:id="@+id/group_main">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_list_black_24dp"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_bookmarks"
            android:icon="@drawable/ic_star_black_24dp"
            android:title="@string/nav_bookmarks" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/nav_task"
            android:title="@string/nav_news" />

    </group>

    <group android:checkableBehavior="none"
        android:id="@+id/group_other">

        <item
            android:id="@+id/nav_user"
            android:icon="@drawable/ic_account_circle"
            android:title="@string/user_center" />

        <item android:id="@+id/nav_change_theme"
            android:title="@string/change_theme"
            android:icon="@drawable/ic_brightness_6_black_24dp" />

        <!--item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings" /-->

        <item
            android:id="@+id/nav_exit"
            android:icon="@android:drawable/ic_delete"
            android:title="@string/exit" />
    </group>

</menu>